@@ -6,6 +6,8 @@
   sources using primary and reserve URLs (PKG_URL and PKG_URL_2 accordingly).
 * Use PKG_URL_2 variable for packages: openssl and libpng.
   (These projects often move tarballs into archive.)
+* Simplify function for `make clean`: now it is just removes whole subdirectory
+  "dist/" instead of alternate deleting of "dist/${CONFIG}" subdirectories.
 * Packages qtbase and freetype (optionally) depend on package harfbuzz now.
 * Update in all configs:
   - GCC_EXTRA_VER from 7.1.0 to 6.4.0
